# python-packaging-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancements.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: cd.yml  ci.yml
op1fun/: main.py
tests/: test_main.py
